style.css
@font-face {
    font-family: headerFont;
    src: url(fonts/Cormorant-Bold.ttf);
}

@font-face {
    font-family: textFont;
    src: url(fonts/Cormorant-Bold.ttf);
}

@media screen and (min-width: 650.1px) {
    html {
        height: 100%;
    }
}

@media screen and (min-width: 650px) {
    #clicker {
        max-width: 200px;
        max-height: 300px;
    }

    .wing {
        max-width: 125px;
        max-height: 125px;
    }

    #screen {
        display: flex;
    }

    #clickerArea {
        width: 70%;
    }

    #windowGrouping {
        width: 60%;
    }

}

#popup {
    visibility: hidden;
    min-width: 180px;
    margin-left: -90px;
    background-color: #333;
    color: #fff;
    text-align: center;
    border-radius: 2px;
    padding: 5px 0px;
    position: fixed;
    z-index: 1;
    left: 50%;
    top: 10px;
    font-size: 17px;
}

#popup.show {
    visibility: visible;
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.6s;
}

@-webkit-keyframes fadein {
    from {top: 0; opacity: 0;}
    to {top: 10px; opacity: 1;}
}

@keyframes fadein {
    from {top: 0; opacity: 0;}
    to {top: 10px; opacity: 1;}
}

@-webkit-keyframes fadeout {
    from {top: 10px; opacity: 1;}
    to {top: 0; opacity: 0;}
}

@keyframes fadeout {
    from {top: 10px; opacity: 1;}
    to {top: 0; opacity: 0;}
}

#clicker {
    width: 40%;
    max-width: 200px;
    max-height: 300px;
    margin-bottom: 20px;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    cursor: pointer;
}

#clicker:active {
    transform: scale(.98);
}

#factoryTitle {
    font-family: headerFont;
    font-size: 2.5em;
    padding: 5px;
}

.wing {
    width: 25%;
    max-width: 125px;
    max-height: 125px;
    vertical-align: top;
    margin-top: 30px;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

#firstWing {
    transform: scaleX(-1);
    margin-right: 10px;
}

#secondWing {
    margin-left: 10px;
}


#teethCounter {
    font-size: 1.6em;
}

#menu>div {
    width: 33%;
    cursor: pointer;
    margin: auto;
}

#menu>div:last-child {
    border-left: 1px solid whitesmoke;
}

#menu>div:first-child {
    border-right: 1px solid whitesmoke;
}

#menu {
    padding: 20px 0px;
    margin: 15px 0px;
    background-color: #0e1111;
    display: flex;
    color: whitesmoke;
    border-radius: 5px;
    width: 100%;
}

.active:after {
    content: "";
    display: block;
    margin: 0 auto;
    width: 50%;
    padding-top: 5px;
    border-bottom: 1px solid whitesmoke;

}

#upgrades {
    margin-top: 10px;
}

#statistics,
#preferences {
    height: 0;
    width: 0;
    overflow: hidden;
    transform: scale(0);
}

#preferences {
    margin: auto;
}

#preferences div {
    width: 100%
}

#preferences button {
    margin-bottom: 20px;
    padding: 12px;
    font-size: .8em;
    margin: 20px auto;

}

#row1,
#row2,
#row3 {
    display: flex;
}

#preferences button:hover {
    transform: translateY(-2px);
}


#cavitiesBox,
#pliersBox,
#teeththiefBox {
    margin: 10px auto;
    padding: 20px;
    display: block;
    width: 80%;
    border: 1px solid black;
    border-radius: 8px;
    font-family: textFont;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    background-color: #fff2f7;
}

#databox span {
    font-size: 1.5em;
}

#databox {
    line-height: 1.8em;
    background-color: #000000;
    background-image: linear-gradient(315deg, #000000 0%, #5e5368 90%);
    color: whitesmoke;
    padding: 20px;
    border: 3px solid #0e1111;
    border-radius: 2px;

}

#databox div:first-child {
    font-size: 1.5em;
}

#databox img:first-child {
    padding-right: 10px;
}

#databox img:last-child {
    padding-left: 10px;
}

#resetTeeth,
#resetConfirm {
    margin-left: 20px;
    border: 2px solid red;
}

#saveString {
    margin: 10px 10px 0px 25px;
}

#saveArea {
    display: flex;
    height: 0;
    width: 0;
    overflow: hidden;
    transform: scale(0);
}

#saveArea button {
    padding: 10px;
}

#resetConfirm {
    display: none;
    background-color: red;
    color: whitesmoke;
    border: 2px solid black;
    padding: 20px;
}


html {
    text-align: center;
    font-family: textFont;
    font-size: 1.2em;
    background: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
}


body {
    background: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
    height: 100%;
}

button {
    background-color: rgb(156, 156, 236);
    margin-top: 5px;
    border-radius: 10px;
    padding: 5px 20px;
    cursor: pointer;
}

